--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   firebase_storage: ^1.0.2
   firebase_core: ^0.2.5
   flutter_local_notifications: ^0.3.9
+  dynamic_theme: ^1.0.0
+  firebase_ml_vision: ^0.2.0+1
 
 
   # The following adds the Cupertino Icons font to your application.
