--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,27 +6,28 @@ version: 1.4.1+6
 dependencies:
   flutter:
     sdk: flutter
-  share: ^0.5.3
-  photo_view: ^0.0.10
-  cloud_firestore: ^0.8.2+3
-  carousel_slider: ^0.0.7
-  intl: ^0.15.7
-  google_sign_in: ^3.2.4
-  firebase_auth: ^0.6.2+1
-  zoomable_image: ^1.2.1+1
-  font_awesome_flutter: ^8.2.0
-  url_launcher: ^4.0.1
-  image_picker: ^0.4.10
   onesignal: ^1.0.3
+  google_sign_in: ^3.2.4
+  cloud_firestore: ^0.8.2+3
+  firebase_auth: ^0.6.6
   firebase_analytics: ^1.0.6
-  cached_network_image: ^0.5.0+1
   firebase_messaging: ^2.1.0
   firebase_storage: ^1.0.4
   firebase_core: ^0.2.5+1
-  flutter_local_notifications: ^0.4.1+1
-  dynamic_theme: ^1.0.0
   firebase_ml_vision: ^0.2.0+2
+  font_awesome_flutter: ^8.2.0
   cupertino_icons: ^0.1.2
+  cached_network_image: ^0.5.0+1
+  zoomable_image: ^1.2.1+1
+  photo_view: ^0.0.10
+  image_picker: ^0.4.10
+  carousel_slider: ^0.0.7
+  url_launcher: ^4.0.1
+  dynamic_theme: ^1.0.0
+  flutter_local_notifications: ^0.4.1+1
+  share: ^0.5.3
+  shared_preferences: ^0.4.3
+  intl: ^0.15.7
 
 dev_dependencies:
   flutter_test:
